--- a/Journey/Journey/Resources/Storyboards/Challenge/CourseLibrary.storyboard
+++ b/Journey/Journey/Resources/Storyboards/Challenge/CourseLibrary.storyboard
@@ -5,8 +5,14 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="SpoqaHanSansNeo-Regular.otf">
+            <string>SpoqaHanSansNeo-Regular</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--Course Library View Controller-->
         <scene sceneID="s0d-6b-0kx">
@@ -17,7 +23,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="tND-pp-FQB">
-                                <rect key="frame" x="0.0" y="44" width="414" height="852"/>
+                                <rect key="frame" x="0.0" y="87" width="414" height="809"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="0fF-P7-Z7w">
                                     <size key="itemSize" width="128" height="128"/>
@@ -27,17 +33,59 @@
                                 </collectionViewFlowLayout>
                                 <cells/>
                             </collectionView>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="iyh-eH-Bc2">
+                                <rect key="frame" x="0.0" y="44" width="414" height="43"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="43" id="QFG-eo-hJr"/>
+                                </constraints>
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="OCn-4c-2zc">
+                                    <size key="itemSize" width="128" height="43"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="CourseCategoryCollectionViewCell" reuseIdentifier="CourseCategoryCollectionViewCell" id="APa-tH-zlC" customClass="CourseCategoryCollectionViewCell" customModule="Journey" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="128" height="43"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="1pt-IX-reW">
+                                            <rect key="frame" x="0.0" y="0.0" width="128" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h3c-Hr-fXI">
+                                                    <rect key="frame" x="48.5" y="14" width="31" height="15.5"/>
+                                                    <fontDescription key="fontDescription" name="SpoqaHanSansNeo-Regular" family="Spoqa Han Sans Neo" pointSize="12"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="h3c-Hr-fXI" firstAttribute="centerY" secondItem="1pt-IX-reW" secondAttribute="centerY" id="0RO-tV-l6J"/>
+                                                <constraint firstItem="h3c-Hr-fXI" firstAttribute="centerX" secondItem="1pt-IX-reW" secondAttribute="centerX" id="Eza-Hk-7EI"/>
+                                            </constraints>
+                                        </collectionViewCellContentView>
+                                        <connections>
+                                            <outlet property="categoryLabel" destination="h3c-Hr-fXI" id="R0p-ZN-T6O"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="iyh-eH-Bc2" secondAttribute="trailing" id="BnH-Eu-SH4"/>
                             <constraint firstAttribute="bottom" secondItem="tND-pp-FQB" secondAttribute="bottom" id="D35-OB-fAm"/>
-                            <constraint firstItem="tND-pp-FQB" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="EGj-PA-yAH"/>
+                            <constraint firstItem="tND-pp-FQB" firstAttribute="top" secondItem="iyh-eH-Bc2" secondAttribute="bottom" id="Gqe-F9-7Uf"/>
+                            <constraint firstItem="iyh-eH-Bc2" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="L36-hR-x8V"/>
                             <constraint firstItem="tND-pp-FQB" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="QPO-s4-geM"/>
                             <constraint firstItem="tND-pp-FQB" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="mKF-a6-XS5"/>
+                            <constraint firstItem="iyh-eH-Bc2" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="qh8-0r-tOj"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="categoryCollectionView" destination="iyh-eH-Bc2" id="rTY-q9-ob9"/>
                         <outlet property="courseLibraryCollectionView" destination="tND-pp-FQB" id="xgU-Eq-oqe"/>
                     </connections>
                 </viewController>
