--- a/Journey/Journey/Resources/Storyboards/Auth/EmailLogin.storyboard
+++ b/Journey/Journey/Resources/Storyboards/Auth/EmailLogin.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Y6W-OH-hqX">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
@@ -30,7 +30,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="예) mohaeng@gmail.com" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="whW-Mh-qnf">
-                                <rect key="frame" x="24" y="198" width="366" height="19"/>
+                                <rect key="frame" x="28" y="198" width="358" height="19"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
@@ -55,7 +55,7 @@
                                 </connections>
                             </button>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="비밀번호 입력" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="aQ1-BW-exP">
-                                <rect key="frame" x="24" y="283.5" width="366" height="17"/>
+                                <rect key="frame" x="28" y="283.5" width="358" height="17"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                             </textField>
@@ -78,7 +78,7 @@
                                 </constraints>
                             </view>
                             <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="이메일 계정 또는 비밀번호를 다시 확인해주세요" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0e6-Gl-TIl">
-                                <rect key="frame" x="202" y="321.5" width="188" height="12"/>
+                                <rect key="frame" x="198" y="321.5" width="188" height="12"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                 <color key="textColor" red="0.96078431369999995" green="0.0078431372550000003" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
@@ -103,7 +103,7 @@
                         <constraints>
                             <constraint firstItem="c8f-hY-e8b" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="28" id="4uh-Qe-dD7"/>
                             <constraint firstItem="rYV-FS-ex0" firstAttribute="top" secondItem="2fQ-wx-2n9" secondAttribute="bottom" constant="16" id="7HE-1z-dAA"/>
-                            <constraint firstItem="whW-Mh-qnf" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="24" id="92r-SD-ZMb"/>
+                            <constraint firstItem="whW-Mh-qnf" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="28" id="92r-SD-ZMb"/>
                             <constraint firstItem="JWK-RE-JXu" firstAttribute="top" secondItem="odr-lE-3x5" secondAttribute="bottom" constant="72" id="CpA-nG-Vox"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="2fQ-wx-2n9" secondAttribute="trailing" constant="24" id="Iak-s9-fpF"/>
                             <constraint firstItem="azN-Xq-jJY" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="JOV-w0-XuG"/>
@@ -111,7 +111,7 @@
                             <constraint firstItem="8k1-OZ-i15" firstAttribute="top" secondItem="whW-Mh-qnf" secondAttribute="bottom" constant="8" id="KjJ-UV-BF7"/>
                             <constraint firstItem="0MS-Id-6ar" firstAttribute="leading" secondItem="5EZ-qb-Rvc" secondAttribute="leadingMargin" constant="4" id="LIU-ei-fXB"/>
                             <constraint firstItem="azN-Xq-jJY" firstAttribute="top" secondItem="2fQ-wx-2n9" secondAttribute="bottom" constant="33" id="LqJ-yH-IPb"/>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="whW-Mh-qnf" secondAttribute="trailing" constant="24" id="OSb-gh-8EY"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="whW-Mh-qnf" secondAttribute="trailing" constant="28" id="OSb-gh-8EY"/>
                             <constraint firstItem="aQ1-BW-exP" firstAttribute="top" secondItem="c8f-hY-e8b" secondAttribute="bottom" constant="8" id="Rd3-pL-HFe"/>
                             <constraint firstItem="8k1-OZ-i15" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="SgU-7k-mkn"/>
                             <constraint firstItem="0MS-Id-6ar" firstAttribute="top" secondItem="aQ1-BW-exP" secondAttribute="bottom" constant="8" id="UZe-A0-LDU"/>
@@ -124,21 +124,21 @@
                             <constraint firstAttribute="trailingMargin" secondItem="8k1-OZ-i15" secondAttribute="trailing" constant="4" id="mVW-fn-GKI"/>
                             <constraint firstItem="rYV-FS-ex0" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="oIV-YD-gP7"/>
                             <constraint firstItem="2fQ-wx-2n9" firstAttribute="top" secondItem="aQ1-BW-exP" secondAttribute="bottom" constant="83" id="ptb-3A-Bj0"/>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="aQ1-BW-exP" secondAttribute="trailing" constant="24" id="so9-Ic-IZ8"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="aQ1-BW-exP" secondAttribute="trailing" constant="28" id="so9-Ic-IZ8"/>
                             <constraint firstItem="odr-lE-3x5" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="32" id="t2K-wU-X9E"/>
                             <constraint firstItem="2fQ-wx-2n9" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="24" id="tXp-Ov-K73"/>
                             <constraint firstItem="c8f-hY-e8b" firstAttribute="top" secondItem="whW-Mh-qnf" secondAttribute="bottom" constant="44" id="vdq-E1-qjs"/>
                             <constraint firstItem="whW-Mh-qnf" firstAttribute="top" secondItem="JWK-RE-JXu" secondAttribute="bottom" constant="8" id="yds-TC-3X8"/>
-                            <constraint firstItem="aQ1-BW-exP" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="24" id="yrV-3z-Ct6"/>
+                            <constraint firstItem="aQ1-BW-exP" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="28" id="yrV-3z-Ct6"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="doLoginButton" destination="2fQ-wx-2n9" id="GVe-mB-R1e"/>
                         <outlet property="emailBottomView" destination="8k1-OZ-i15" id="Th8-2U-Qn3"/>
                         <outlet property="emailLabel" destination="JWK-RE-JXu" id="Zwf-FI-rqP"/>
                         <outlet property="emailTextField" destination="whW-Mh-qnf" id="qqy-j4-Rag"/>
                         <outlet property="errorLabel" destination="0e6-Gl-TIl" id="eQj-TK-rId"/>
                         <outlet property="findPasswordButton" destination="rYV-FS-ex0" id="oiY-5p-WXf"/>
+                        <outlet property="loginButton" destination="2fQ-wx-2n9" id="wIP-2h-h1Q"/>
                         <outlet property="passwordBottonView" destination="0MS-Id-6ar" id="Cd3-w8-RYK"/>
                         <outlet property="passwordLabel" destination="c8f-hY-e8b" id="Pdg-PF-Atx"/>
                         <outlet property="passwordTextField" destination="aQ1-BW-exP" id="fth-Uh-eLU"/>
@@ -157,7 +157,7 @@
             <color red="0.9137254901960784" green="0.9137254901960784" blue="0.9137254901960784" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="LoginYellow">
-            <color red="1" green="0.94901960784313721" blue="0.81568627450980391" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="1" green="0.94900000095367432" blue="0.81599998474121094" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="White">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
