[#301] textfield underline, label 작성 중 색 변경

--- a/Journey/Journey/Resources/Storyboards/Auth/FindPassword.storyboard
+++ b/Journey/Journey/Resources/Storyboards/Auth/FindPassword.storyboard
@@ -102,9 +102,11 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="emailLabel" destination="czB-Kw-Jva" id="lRh-FD-exB"/>
                         <outlet property="emailTextField" destination="qlG-Pi-TuN" id="0kd-9U-g2n"/>
                         <outlet property="errorLabel" destination="8cq-cX-9u5" id="Ttw-Se-O7A"/>
                         <outlet property="nextButton" destination="0lv-6i-rOr" id="yM2-Z3-1lO"/>
+                        <outlet property="underlineView" destination="Wht-TW-o2Z" id="CXn-f3-Edk"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
