--- a/Mohaeng/Mohaeng/Sources/Cells/CourseLibraryCollectionVIew/CourseLibraryCollectionViewCell.xib
+++ b/Mohaeng/Mohaeng/Sources/Cells/CourseLibraryCollectionVIew/CourseLibraryCollectionViewCell.xib
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -18,7 +19,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="CourseLibraryCollectionViewCell" reuseIdentifier="CourseLibraryCollectionViewCell" id="gTV-IL-0wX" customClass="CourseLibraryCollectionViewCell" customModule="Journey" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="CourseLibraryCollectionViewCell" reuseIdentifier="CourseLibraryCollectionViewCell" id="gTV-IL-0wX" customClass="CourseLibraryCollectionViewCell" customModule="Mohaeng" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="354" height="220"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -87,7 +88,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
-                                <color key="backgroundColor" name="typeHD"/>
+                                <color key="backgroundColor" name="OrangeThemeBubble"/>
                                 <constraints>
                                     <constraint firstItem="bUf-94-3jk" firstAttribute="leading" secondItem="9e7-6V-LcO" secondAttribute="leading" constant="9" id="8aS-ay-0gN"/>
                                     <constraint firstAttribute="trailing" secondItem="bUf-94-3jk" secondAttribute="trailing" constant="9" id="e9k-Sg-2Lh"/>
@@ -95,6 +96,10 @@
                                     <constraint firstItem="bUf-94-3jk" firstAttribute="top" secondItem="9e7-6V-LcO" secondAttribute="top" constant="5" id="mPi-sB-aam"/>
                                 </constraints>
                             </view>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="courseLibraryBubbleImage" translatesAutoresizingMaskIntoConstraints="NO" id="QSc-c0-bTe">
+                                <rect key="frame" x="203.5" y="38" width="8" height="7"/>
+                                <color key="tintColor" name="OrangeThemeBubble"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" name="typeH"/>
                         <constraints>
@@ -106,7 +111,9 @@
                             <constraint firstItem="EhB-Zq-yiF" firstAttribute="leading" secondItem="9MH-Zf-ZLT" secondAttribute="leading" constant="25" id="OlZ-4Z-us1"/>
                             <constraint firstItem="EhB-Zq-yiF" firstAttribute="top" secondItem="9MH-Zf-ZLT" secondAttribute="top" constant="25" id="PyB-J2-rZD"/>
                             <constraint firstAttribute="trailing" secondItem="usk-wx-1yp" secondAttribute="trailing" id="ZMF-cf-eqk"/>
+                            <constraint firstItem="QSc-c0-bTe" firstAttribute="bottom" secondItem="9e7-6V-LcO" secondAttribute="bottom" constant="-3" id="Zcf-vm-6pW"/>
                             <constraint firstItem="usk-wx-1yp" firstAttribute="leading" secondItem="9MH-Zf-ZLT" secondAttribute="leading" id="fYi-bf-F4E"/>
+                            <constraint firstItem="9e7-6V-LcO" firstAttribute="leading" secondItem="QSc-c0-bTe" secondAttribute="trailing" constant="-3" id="qOz-Ke-dRe"/>
                             <constraint firstItem="8xM-Ca-p4y" firstAttribute="centerX" secondItem="9MH-Zf-ZLT" secondAttribute="centerX" id="qam-H6-3iD"/>
                             <constraint firstAttribute="bottom" secondItem="usk-wx-1yp" secondAttribute="bottom" id="sqx-ED-Njf"/>
                             <constraint firstItem="AHc-vq-9d4" firstAttribute="leading" secondItem="9MH-Zf-ZLT" secondAttribute="leading" constant="23" id="wtA-vC-j9F"/>
@@ -124,6 +131,7 @@
             </constraints>
             <size key="customSize" width="354" height="237"/>
             <connections>
+                <outlet property="bubbleImageView" destination="QSc-c0-bTe" id="rcQ-0X-7UJ"/>
                 <outlet property="cellBgView" destination="9MH-Zf-ZLT" id="bxm-Pq-lWf"/>
                 <outlet property="courseDescriptionView" destination="9e7-6V-LcO" id="8sD-DJ-MH4"/>
                 <outlet property="coursePropertyLabel" destination="bUf-94-3jk" id="ecn-Bu-Qhg"/>
@@ -133,14 +141,18 @@
                 <outlet property="startLabel" destination="wpR-bV-dQb" id="JHa-9e-rXv"/>
                 <outlet property="titleLabel" destination="EhB-Zq-yiF" id="Nay-GU-oBh"/>
             </connections>
-            <point key="canvasLocation" x="353.62318840579712" y="156.02678571428569"/>
+            <point key="canvasLocation" x="353.62318840579712" y="155.35714285714286"/>
         </collectionViewCell>
     </objects>
     <resources>
         <image name="btnSide" width="12" height="12"/>
+        <image name="courseLibraryBubbleImage" width="8" height="7"/>
         <image name="typeHwithColor" width="76" height="76"/>
         <namedColor name="Black1Text">
             <color red="0.125" green="0.125" blue="0.125" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="OrangeThemeBubble">
+            <color red="1" green="0.82400000095367432" blue="0.70599997043609619" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="typeH">
             <color red="1" green="0.94099998474121094" blue="0.89399999380111694" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
