--- a/Mohaeng/Mohaeng/Resources/Storyboards/Tabbar.storyboard
+++ b/Mohaeng/Mohaeng/Resources/Storyboards/Tabbar.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="HqF-25-05f">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="HqF-25-05f">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -10,7 +11,7 @@
         <!--Tabbar View Controller-->
         <scene sceneID="3Yy-GQ-m75">
             <objects>
-                <tabBarController storyboardIdentifier="TabbarViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="HqF-25-05f" customClass="TabbarViewController" customModule="Journey" customModuleProvider="target" sceneMemberID="viewController">
+                <tabBarController storyboardIdentifier="TabbarViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="HqF-25-05f" customClass="TabbarViewController" customModule="Mohaeng" customModuleProvider="target" sceneMemberID="viewController">
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="4dC-sB-NL4">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -38,10 +39,10 @@
             </objects>
             <point key="canvasLocation" x="-901" y="82"/>
         </scene>
-        <!--Challenge-->
+        <!--Course-->
         <scene sceneID="Tyy-rw-BPx">
             <objects>
-                <viewControllerPlaceholder storyboardName="Challenge" id="h8u-sX-FfF" sceneMemberID="viewController">
+                <viewControllerPlaceholder storyboardName="Course" id="h8u-sX-FfF" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Item" id="prF-vF-3Am"/>
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Y7f-VJ-eod" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
